<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite" >

    <Button
        android:id="@+id/popup_edit"
        android:text="@string/share_edit"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"/>
  <Button
      android:id="@+id/popup_delete"
      android:text="@string/share_delete"
      android:layout_margin="5dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/colorWhite"/>



    <Button
        android:layout_margin="5dp"
        android:text="@string/share_comment"
        android:id="@+id/popup_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"/>
</LinearLayout>