<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="14dp">

    <TextView
        android:id="@+id/title_one_share"
        tools:text="@string/one_share_title_example"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/date_one_share"
        tools:text="@string/one_share_date_example"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_toLeftOf="@+id/time_one_share"
        android:layout_toStartOf="@+id/time_one_share"/>

    <TextView
        android:id="@+id/time_one_share"
        tools:text="@string/one_share_time_example"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="19dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"/>

    <TextView
        android:id="@+id/text_one_share"
        tools:text="@string/one_share_text_example"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/title_one_share"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorGray"
        android:layout_below="@id/text_one_share"
        android:layout_marginTop="16dp"/>

</RelativeLayout>