<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="129dp">
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/commenter_avatar"
        android:src="@drawable/ic_avatar_default"
        android:layout_margin="16dp"
        android:layout_width="40dp"
        android:layout_height="40dp" />
    
    <TextView
        android:id="@+id/commenter_username"
        tools:text="@string/share_name_example"
        android:textSize="14sp"
        android:textColor="@color/colorTextPurple"
        android:layout_toRightOf="@id/commenter_avatar"
        android:layout_toEndOf="@id/commenter_avatar"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="27dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/commenter_action"
        android:text="@string/message_reply_share"
        android:textSize="14sp"
        android:textColor="@color/colorTextPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="27dp"
        android:layout_toRightOf="@+id/commenter_username"
        android:layout_toEndOf="@+id/commenter_username"
        />

    <TextView
        android:id="@+id/comment_title"
        tools:text="@string/share_title_example"
        android:textSize="14sp"
        android:textColor="@color/colorTextPurple"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toRightOf="@id/commenter_action"
        android:layout_toEndOf="@id/commenter_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/commenter_content"
        tools:text="@string/comment"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commenter_username"
        android:layout_toRightOf="@+id/commenter_date"
        android:layout_toEndOf="@+id/commenter_date"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/commenter_username"
        android:layout_alignStart="@+id/commenter_username"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"/>

    <TextView
        android:id="@+id/commenter_date"
        tools:text="@string/share_date_example"
        android:textSize="12sp"
        android:layout_below="@+id/commenter_username"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="42dp"/>
</RelativeLayout>